<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_list_of_absent_present_students"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="10"
    tools:context="com.example.android.androidregister.ListOfAbsentPresentStudentsActivity">

    <TextView
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:text="@string/click_to_change_attendance"
        android:layout_width="match_parent"
        android:layout_weight="2"
        android:layout_height="0dp" />

    <LinearLayout
        android:layout_weight="7"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/present"
                android:textColor="#4CC417" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/list_present"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="70dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/absent"
                android:textColor="#E41B17" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/list_absent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </android.support.v7.widget.RecyclerView>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_weight="1"
        android:layout_marginTop="50dp"
        android:id="@+id/list_item_students_btn_submit"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/btn_text_submit" />

</LinearLayout>
